modificaciones general de todas las clases